# health-data-pipeline

./: .dockerignore  .gitignore  README.md  project-brief.md  pyproject.toml
.github/workflows/: ci.yml
api/: main.py
dags/: health_pipeline_dag.py
dashboard/: app.py
data_gen/: config.py  generate.py
docs/: architecture.md  monitoring.md
infra/: .env  Dockerfile.airflow  Dockerfile.app  Dockerfile.dashboard  Dockerfile.mlflow  docker-compose.yml  generate-secret.sh  requirements.txt
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
models/: anomaly.py  features.py  forecast.py  mlflow_utils.py  register.py  registry.py  score.py
tests/: conftest.py  test_anomaly.py  test_dashboard.py  test_db_integration.py  test_features.py  test_generate.py  test_validation_checks.py
validation/: checks.py  run.py
warehouse/: db.py  ingest.py  models.py
warehouse/migrations/: env.py
warehouse/migrations/versions/: cd260a0569e1_index_run_id_on_raw_monthly_reports_and_.py  feec6204d742_initial_schema.py
