[project]
name = "health-data-pipeline"
version = "0.1.0"
description = "Infra-first ML platform demo: synthetic health-program data warehouse with anomaly detection, forecasting, and MLOps tooling."
requires-python = ">=3.12,<3.13"
dependencies = [
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "mlflow>=2.12",
    "shap>=0.45",
    "numba>=0.60",
    "llvmlite>=0.43",
    "pydantic>=2.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "streamlit>=1.32",
    "python-dotenv>=1.0",
    "python-dateutil>=2.9",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]
